# Stark-Link

./: .gitignore  BRD.md  CLAUDE.md
.github/workflows/: build.yml  release.yml
relay-server/: Dockerfile  package-lock.json  package.json
relay-server/src/: index.ts  room.ts  types.ts
stark-link-core/: Cargo.toml
stark-link-core/src/: config.rs  device.rs  error.rs  lib.rs
stark-link-core/src/clipboard/: mod.rs
stark-link-core/src/connection/: mod.rs
stark-link-core/src/crypto/: mod.rs
stark-link-core/src/discovery/: mod.rs
stark-link-core/src/protocol/: mod.rs
stark-link-core/src/transfer/: mod.rs
stark-link-desktop/: index.html  package-lock.json  package.json
stark-link-desktop/src/: App.tsx  styles.css  types.ts
stark-link-desktop/src-tauri/: Cargo.toml  tauri.conf.json
stark-link-desktop/src-tauri/capabilities/: default.json
stark-link-desktop/src-tauri/src/: lib.rs  main.rs
stark-link-desktop/src/components/: DeviceCard.tsx  Sidebar.tsx  TransferItem.tsx
stark-link-desktop/src/pages/: Clipboard.tsx  Dashboard.tsx  Devices.tsx  RemoteControl.tsx  Settings.tsx  Transfers.tsx
