[package]
name = "stark-link-core"
version = "0.1.0"
edition = "2021"
description = "Core library for Stark-Link cross-device communication platform"
license = "MIT"

[lib]
name = "stark_link_core"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
x25519-dalek = { version = "2", features = ["static_secrets"] }
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tokio-tungstenite = "0.21"
mdns-sd = "0.11"
lz4_flex = "0.11"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
futures-util = "0.3"
hostname = "0.4"
