[package]
name = "stark-link-desktop"
version = "0.1.0"
edition = "2021"
description = "Stark-Link Desktop Application"

[lib]
name = "stark_link_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
stark-link-core = { path = "../../stark-link-core" }
uuid = { version = "1", features = ["v4", "serde"] }
